[gd_scene load_steps=4 format=3 uid="uid://by865efl4iwy"]

[ext_resource type="Script" path="res://Game/UI/NumberOfTroops/RecruitUI.gd" id="1_05f0x"]
[ext_resource type="Script" path="res://Game/UI/Draggable.gd" id="2_4uf07"]
[ext_resource type="Script" path="res://Game/UI/DragSource.gd" id="3_eyhmy"]

[node name="NumberOfTroops" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_05f0x")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.0627451)

[node name="Draggable" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
mouse_filter = 2
script = ExtResource("2_4uf07")

[node name="ColorRect" type="ColorRect" parent="Draggable"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 1
color = Color(0.5, 0.5, 0.5, 1)
script = ExtResource("3_eyhmy")

[node name="MarginContainer" type="MarginContainer" parent="Draggable"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Draggable/MarginContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="Spacing1" type="Control" parent="Draggable/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="TroopSlider" type="HSlider" parent="Draggable/MarginContainer/VBoxContainer"]
layout_mode = 2
value = 100.0
scrollable = false

[node name="TroopNumber" type="Label" parent="Draggable/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Tex"
horizontal_alignment = 1

[node name="Spacing2" type="Control" parent="Draggable/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Draggable/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
mouse_filter = 2

[node name="Cancel" type="Button" parent="Draggable/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Control" type="Control" parent="Draggable/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Confirm" type="Button" parent="Draggable/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Confirm"

[connection signal="dragged" from="Draggable/ColorRect" to="Draggable" method="_on_dragged"]
[connection signal="value_changed" from="Draggable/MarginContainer/VBoxContainer/TroopSlider" to="." method="_on_troop_slider_value_changed"]
[connection signal="pressed" from="Draggable/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Draggable/MarginContainer/VBoxContainer/HBoxContainer/Confirm" to="." method="_on_Confirm_pressed"]
